<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/images"

        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="110dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.497" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/welcome"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/textView"
        android:visibility="visible"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="82dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        android:textSize="22sp"
        android:text="@string/tex"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:visibility="gone"
        android:id="@+id/textView2" />
<TextView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/wel6"
    app:layout_constraintLeft_toLeftOf="parent"
    android:textColor="#FFF"
    android:textSize="22sp"
    android:textStyle="bold"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView2"
    app:layout_constraintHorizontal_bias="1.0"
    android:visibility="gone"
    android:id="@+id/textView3" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/name"
    android:id="@+id/textView4"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    android:textSize="25sp"
    android:textStyle="bold"
    android:textColor="@color/colorAccent"
    android:visibility="gone"
    app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintHorizontal_bias="0.923"
        android:layout_marginStart="8dp"
        android:visibility="gone"
        android:layout_marginEnd="16dp" />
</android.support.constraint.ConstraintLayout>